--- a/budhabrot.html
+++ b/budhabrot.html
@@ -35,7 +35,7 @@
 
     // Specify the range of plot in the complex plane.
     // We assume it's of the form [xMin, xMax, yMin, yMax]
-    var range = [-2, 2, -2, 2];
+    var range = [-2, 1.5, -1.75, 1.75];
 
     // The stride is inversely proportional to resolution. Lesser values implies higher resolution
     // at computational cost. It is the amount of pixels skiped per xStep or yStep.
@@ -70,7 +70,7 @@
     }
 
     function colorIntensity(rawIntensity) {
-      return 255.0*Math.pow(rawIntensity, 0.9);
+      return 255.0*rawIntensity;
     }
 
     function color(r, g, b) {
@@ -129,19 +129,11 @@
         }
       }
 
-      for(let x = xMin; x <= xMax; x += xStep){
-        for(let y = yMin; y <= yMax; y += yStep){
-          xi = xIndex[Math.floor(x/xStep)];
-          yi = yIndex[Math.floor(y/yStep)];
-          boxes[xi][yi] = boxes[xi][yi]/max;
-        }
-      }
-
       return {boxes: boxes, max: max};
     }
 
     function plot(context) {
-      let numSamples = 50000;
+      let numSamples = 200000;
       let red = computeBoxes(5000, numSamples);
       let green = computeBoxes(500, numSamples);
       let blue = computeBoxes(50, numSamples);
@@ -151,21 +143,20 @@
           for(let y = yMin; y <= yMax; y += yStep) {
             xi = xIndex[Math.floor(x/xStep)];
             yi = yIndex[Math.floor(y/yStep)];
-            context.fillStyle = color(red.boxes[xi][yi], green.boxes[xi][yi], blue.boxes[xi][yi]);
+            context.fillStyle = color(red.boxes[xi][yi]/red.max, green.boxes[xi][yi]/green.max, blue.boxes[xi][yi]/blue.max);
             context.fillRect(yScale*y + yOffset - stride/2, xScale*x + xOffset - stride/2, stride, stride);
-
-            red.boxes[xi][yi] = red.max*red.boxes[xi][yi];
-            green.boxes[xi][yi] = green.max*green.boxes[xi][yi];
-            blue.boxes[xi][yi] = blue.max*blue.boxes[xi][yi];
           }
         }
+
         red = computeBoxes(5000, numSamples, red.boxes, red.max);
         green = computeBoxes(500, numSamples, green.boxes, green.max);
         blue = computeBoxes(50, numSamples, blue.boxes, blue.max);
       }, 1);
     }
 
-    plot(ctx);
+    document.addEventListener("DOMContentLoaded", () => {
+      plot(ctx);
+    });
   </script>
   </body>
 </html>
